--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "import os\n",
-    "os.chdir('/Users/aditiprabhakar/Desktop/kaggle/MNIST')\n",
+    "os.chdir('~/Desktop/kaggle/MNIST')\n",
     "os.getcwd()"
    ]
   },
